test maintain/build rpefix

--- a/.github/workflows/checkupdates.yml
+++ b/.github/workflows/checkupdates.yml
@@ -139,7 +139,7 @@ jobs:
               echo "github = '${{ secrets.GHuK }}'" >> $keyfile
 
               # Append all .nvchecker.toml files
-              find "${GITHUB_WORKSPACE}" -name ".nvchecker.toml" -exec sh -c 'cat {} && echo' \; >> "${config_file}"
+              find "${GITHUB_WORKSPACE}/maintain/build" -name ".nvchecker.toml" -exec sh -c 'cat {} && echo' \; >> "${config_file}"
               
               log_debug "Generated ${config_file}:"
               cat "${config_file}"
