--- a/.github/workflows/checkupdates.yml
+++ b/.github/workflows/checkupdates.yml
@@ -36,7 +36,7 @@ jobs:
             openssh github-cli jq expac ruby-rdoc ruby-pkg-config gnupg \
             pyalpm python-awesomeversion python-packaging python-lxml \
             python-jq python-gobject python-requests libnotify nvchecker \
-            binutils multilib-devel python-aiohttp clang python-thinc-bin-8.3.2
+            binutils multilib-devel python-aiohttp clang
 
       - name: Setup non-root user for AUR
         shell: bash
@@ -65,7 +65,8 @@ jobs:
           BottomUp
           RemoveMake
           SudoLoop
-          UseAsk' | sudo tee /etc/paru.conf          
+          UseAsk' | sudo tee /etc/paru.conf
+          paru -S python-thinc-bin-8.3.2
 
       - name: Setup SSH key
         run: |
