--- a/.github/workflows/checkupdates.yml
+++ b/.github/workflows/checkupdates.yml
@@ -66,7 +66,7 @@ jobs:
           RemoveMake
           SudoLoop
           UseAsk' | sudo tee /etc/paru.conf
-          sudo -u builder paru -S python-thinc-bin-8.3.2
+          #sudo -u builder paru -S python-thinc-bin-8.3.2
 
       - name: Setup SSH key
         run: |
