--- a/.github/workflows/checkupdates.yml
+++ b/.github/workflows/checkupdates.yml
@@ -36,7 +36,7 @@ jobs:
             openssh github-cli jq expac ruby-rdoc ruby-pkg-config gnupg \
             pyalpm python-awesomeversion python-packaging python-lxml \
             python-jq python-gobject python-requests libnotify nvchecker \
-            binutils multilib-devel python-aiohttp clang
+            binutils multilib-devel python-aiohttp clang python-jq
 
       - name: Setup non-root user for AUR
         shell: bash
