--- a/abandoned/slade-git/PKGBUILD
+++ b/abandoned/slade-git/PKGBUILD
@@ -1,19 +1,21 @@
 # Maintainer: envolution
 # Contributor: Jan Cholasta <grubber at grubber cz>
-# shellcheck shell=bash disable=SC2034,SC2154
 
 pkgname=slade-git
-pkgver=3.2.7+r3092+g3baac1241
-pkgrel=4
-pkgdesc='SLADE3 Doom editor (git version)'
+pkgver=3.2.7+r3112+ga515292e7
+pkgrel=2
+pkgdesc='SLADE3 Doom editor'
 arch=('i686' 'x86_64')
 url='http://slade.mancubus.net/'
-license=('GPL')
-depends=('bzip2'
+license=('GPL-2.0-only')
+#slade -------------
+depends=(
+  'bzip2'
   'fluidsynth'
   'freeimage'
   'ftgl'
   'glu'
+  'gtk3'
   'libgl'
   'lua'
   'mpg123'
@@ -22,15 +24,15 @@ depends=('bzip2'
   'wxwidgets-gtk3'
   'zlib')
 makedepends=('cmake'
-  'git'
   'p7zip')
-provides=('slade')
-conflicts=('slade')
-source=('slade::git+https://github.com/sirjuddington/SLADE.git')
+
+source=("slade::git+https://github.com/sirjuddington/SLADE.git")
 sha256sums=('SKIP'
             'b4f2e8ebac43c0fc351a3c94b6fad6862d8cc9cdb55f7a224747d1066a2e09f5')
+
 #wxwidgets -------------------
-makedepends+=(cmake
+makedepends+=(
+  cmake
   git
   glu
   gst-plugins-base
@@ -64,6 +66,18 @@ depends+=(bash
 source+=(git+https://github.com/wxWidgets/wxWidgets#tag=v3.2.6)
 #</wxwidgets>
 
+#sfml2 - https://github.com/sirjuddington/SLADE/pull/1761
+depends+=(sfml2)
+#</sfml2>
+
+pkgver() {
+  cd slade
+  _version=$(git tag --sort=-v:refname --list | grep '^[0-9.]*$' | head -n1)
+  _commits=$(git rev-list --count HEAD)
+  _short_commit_hash=$(git rev-parse --short=9 HEAD)
+  echo "${_version#'v'}+r${_commits}+g${_short_commit_hash}"
+}
+
 build() {
   # Build wxwidgets-gtk
   cd "$srcdir"
@@ -77,7 +91,8 @@ build() {
     -DwxUSE_LIBPNG=sys -DwxUSE_LIBTIFF=sys \
     -DwxUSE_LIBLZMA=sys -DwxUSE_NANOSVG=sys \
     -DwxUSE_LIBMSPACK=ON -DwxUSE_PRIVATE_FONTS=ON \
-    -DwxUSE_GTKPRINT=ON -DwxUSE_GLCANVAS_EGL=OFF
+    -DwxUSE_GTKPRINT=ON -DwxUSE_GLCANVAS_EGL=OFF \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.30
   cmake --build build-wxwidgets
 
   # Generate translation files (Makefile needed for this step)
@@ -89,13 +104,13 @@ build() {
   # Build slade
   export WX_CONFIG="$srcdir/build-wxwidgets/wx-config"
   export PKG_CONFIG_PATH="$srcdir/build-wxwidgets/lib/pkgconfig:$PKG_CONFIG_PATH"
-  export LD_LIBRARY_PATH="$srcdir/build-wxwidgets/lib:$LD_LIBRARY_PATH"
+  export LD_LIBRARY_PATH="$srcdir/build-wxwidgets/lib:/opt/sfml2/lib:$LD_LIBRARY_PATH"
 
   cd slade
   cmake -B build -S . \
     -DCMAKE_BUILD_TYPE=None \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_INSTALL_RPATH=/usr/share/slade3/lib \
+    -DCMAKE_INSTALL_RPATH="/usr/share/slade3/lib:/opt/sfml2/lib" \
     -DwxWidgets_CONFIG_EXECUTABLE="$WX_CONFIG"
   cmake --build build
 }
