--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -49,3 +49,95 @@ jobs:
             binutils multilib-devel python-aiohttp clang python-jq \
             sudo 
           echo "::endgroup::"
+
+      - name: Setup non-root user for AUR operations
+        shell: bash
+        run: |
+          set -e
+          echo "::group::Setup non-root user 'builder'"
+          echo "Creating build user 'builder'..."
+          useradd -m -s /bin/bash builder 
+          echo "builder ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/builder
+          chmod 0440 /etc/sudoers.d/builder
+
+          echo "Setting up directories for builder..."
+          install -d -o builder -g builder -m 700 /home/builder/.gnupg 
+          install -d -o builder -g builder -m 755 /home/builder/.cache
+          install -d -o builder -g builder -m 755 /home/builder/.local
+          install -d -o builder -g builder -m 755 /home/builder/.local/share
+          install -d -o builder -g builder -m 755 /home/builder/.cache/paru
+          install -d -o builder -g builder -m 755 /home/builder/.local/share/paru
+
+          echo "Builder user setup complete."
+          echo "::endgroup::"
+
+      - name: Install paru (AUR helper)
+        run: |
+          set -e
+          echo "::group::Install paru (AUR helper)"
+          echo "Installing paru for 'builder' user..."
+          cd /tmp
+          sudo -u builder git clone https://aur.archlinux.org/paru-bin.git
+          cd paru-bin
+          sudo -u builder makepkg -si --noconfirm
+
+          echo "Configuring paru..."
+          echo -e "[options]\nBatchInstall\nBottomUp\nRemoveMake\nSudoLoop\nUseAsk" | sudo tee /etc/paru.conf > /dev/null
+          
+          echo "Paru installation and configuration complete."
+          echo "::endgroup::"
+
+      - name: Setup SSH key for AUR
+        run: |
+          set -e
+          echo "::group::Setup SSH key for AUR"
+          echo "Setting up SSH key for AUR access..."
+          SSH_DIR="/home/builder/.ssh"
+          mkdir -p "${SSH_DIR}"
+          echo "${{ secrets.AUR_SSH_PRIVATE_KEY }}" > "${SSH_DIR}/aur"
+          
+          ssh-keyscan aur.archlinux.org >> "${SSH_DIR}/known_hosts"
+          
+          echo "Host aur.archlinux.org" >> "${SSH_DIR}/config"
+          echo "  IdentityFile ${SSH_DIR}/aur" >> "${SSH_DIR}/config"
+          echo "  User aur" >> "${SSH_DIR}/config" 
+          echo "  StrictHostKeyChecking yes" >> "${SSH_DIR}/config"
+
+          chown -R builder:builder "${SSH_DIR}"
+          chmod 700 "${SSH_DIR}"
+          chmod 600 "${SSH_DIR}/aur"
+          chmod 600 "${SSH_DIR}/config" 
+          chmod 644 "${SSH_DIR}/known_hosts"
+          
+          echo "SSH key setup complete. Permissions:"
+          ls -ldn "${SSH_DIR}" "${SSH_DIR}/aur" "${SSH_DIR}/config" "${SSH_DIR}/known_hosts" # Use -n to show numeric UID/GID
+          echo "::endgroup::"
+
+      - name: Configure Git for builder user
+        run: |
+          set -e
+          echo "::group::Configure Git for builder user"
+          echo "Configuring Git for 'builder' user..."
+          sudo -u builder git config --global user.name "${{ env.GIT_USERNAME }}"
+          sudo -u builder git config --global user.email "${{ env.GIT_EMAIL }}"
+          echo "Git configuration complete."
+          echo "::endgroup::"
+
+      - name: Load NVChecker Custom Source (if any)
+        run: |
+          set -e
+          echo "::group::Load NVChecker Custom Source"
+          CUSTOM_NV_SOURCE_SCRIPT="${GITHUB_WORKSPACE}/scripts/github-graphql.py"
+          if [ -f "${CUSTOM_NV_SOURCE_SCRIPT}" ]; then
+            SITE_PACKAGES_DIR=$(python3 -c "import site; print(site.getsitepackages()[0])")
+            NVCHECKER_CUSTOM_SOURCE_DIR="${SITE_PACKAGES_DIR}/nvchecker_source"
+            
+            echo "::notice title=NVChecker Custom Source::Copying '${CUSTOM_NV_SOURCE_SCRIPT}' to '${NVCHECKER_CUSTOM_SOURCE_DIR}'..."
+            mkdir -p "${NVCHECKER_CUSTOM_SOURCE_DIR}" 
+            cp "${CUSTOM_NV_SOURCE_SCRIPT}" "${NVCHECKER_CUSTOM_SOURCE_DIR}/"
+            echo "Custom NVChecker source loaded."
+          else
+            echo "::notice title=NVChecker Custom Source::Script not found at '${CUSTOM_NV_SOURCE_SCRIPT}'. Skipping."
+          fi
+          echo "::endgroup::"
+
